--- a/assets/css/log.css
+++ b/assets/css/log.css
@@ -1,26 +1,25 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: "poppins";
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-   
-    
+    background-color: #7f7f7f;
+ 
     
 }
-.container{
-    height: 650px;
+.containe{
+    margin-top: 150px;
+    height: 550px;
     width: 410px;
     background: #eee;
     border-radius: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     overflow: hidden;
     position: relative;
 }
@@ -50,10 +49,7 @@ body{
 .Register-form.active{
     transform: translateX(0);
 }
-h2{
-    color: #333;
-    font-size: 32px;
-}
+
 .input-box{
     margin: 45px 0;
     height: 40px;
@@ -96,11 +92,12 @@ input#checked{
 }
 .forgot-section{
     display: flex;
-    justify-content: space-between;
     width: 100%;
+    justify-content: space-between;
     margin-top: -20px;
 }
 .forgot-section span{
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,7 +107,7 @@ input#checked{
     color: #333;
     text-decoration: none;
 }
-.btn{
+.btnt{
     width: 100%;
     height: 40px;
     margin-top: 20px;
@@ -125,7 +122,7 @@ input#checked{
     z-index: 1;
     overflow: hidden;
 }
-.btn::before{
+.btnt::before{
     content: "";
     position: absolute;
     left: 0;
@@ -133,16 +130,11 @@ input#checked{
     height: 100%;
     z-index: -1;
 }
-.btn:hover:before{
+.btnt:hover:before{
 width: 100%;
 }
 
-p{
-    color: rgba(0,0,0,.5);
-    font-size: 13px;
-    font-weight: 500;
-    margin: 25px 0;
-}
+
 .social-media{
     display: flex;
 }
@@ -191,135 +183,4 @@ p{
     text-decoration: none;
     font-size: 14px;
 }
-.btn1,.btn2{
-  border: none;
-}
 
-
-@media(max-width: 768px){
-    .container{
-        height: 500px;
-        width: 380px;
-    }
-    h2{
-        font-size: 26px;
-    }
-    .input-box{
-        margin: 34px 0;
-        height: 35px;
-        width: 300px;
-    }
-    .input-box label{
-        font-size: 13px;
-    
-    }
-    .input-box input{
-        font-size: 13px;
-    }
-    .input-box i{
- 
-        font-size: 18px;
-
-    }
-    input::placeholder{
-        font-size: 13px;
-    }
-    .forgot-section span{
-        font-size: 12px;
-    }
-    input#checked{
-        margin-right: 2px;
-        height: 15px;
-    }
-    .btn{
-        height: 35px;
-        font-size: 15px;
-    }
-    p{
-        font-size: 11px;
-    }
-    .social-media i{
-        font-size: 20px;
-       
-    }
-    .RegisteBtn a{
-        text-decoration: none;
-        font-size: 13px;
-    }
-
-}
-@media(max-width: 480px){
-    .container{
-        height: 450px;
-        width: 310px;
-    }
-    h2{
-        font-size: 22px;
-    }
-    .input-box{
-        margin: 20px 0;
-        height: 35px;
-        width: 220px;
-    }
-    .input-box label{
-        font-size: 12px;
-    
-    }
-    .input-box input{
-        font-size: 12px;
-    }
-    .input-box i{
- 
-        font-size: 16px;
-
-    }
-    input::placeholder{
-        font-size: 10px;
-    }
-    .forgot-section span{
-        font-size: 9px;
-    }
-    input#checked{
-        margin-right: 2px;
-        height: 10px;
-    }
-    .btn{
-        height: 25px;
-        font-size: 12px;
-    }
-    p{
-        font-size: 11px;
-    }
-    .social-media i{
-        font-size: 18px;
-       
-    }
-    .RegisteBtn a{
-        text-decoration: none;
-        font-size: 11px;
-    }
-
-}
-@media(max-width:365px){
-    .container{
-        height: 420px;
-        width: 280px;
-    }
-    h2{
-        font-size: 18px;
-    }
-    .input-box{
-        margin: 20px 0;
-        height: 35px;
-        width: 200px;
-    }
-    .social-media i{
-        font-size: 16px;
-       
-    }
-    .RegisteBtn a{
-        text-decoration: none;
-        font-size: 9px;
-    }
- 
-}
