--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -155,8 +155,8 @@
     border-radius: 50%;}
     
     /* setup owlcarousel */
-    .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot{display: none;}
-    .owl-theme .owl-dots {display: none;}
+    /* .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot{display: none;}
+    .owl-theme .owl-dots {display: none;} */
     /* Listing Product */
     .listing-product {
     margin-top: 20px;
@@ -186,30 +186,28 @@
     .tab-content {
     margin-top: 20px;
     display: none;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+  
     }
     
     .tab-content.active {
     display: block;
     }
     
-    .tab-1 .content {
-    width: 100%;
- 
-     background-color: #fff;
+  
 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    /* title product */
+    .title-product-1 {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 15px;
+        margin-top: -40px;
     }
-    
-    .tab-2 .content {
-    width: 100%;
-
-
-    
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    .title-product-1 h1{
+        font-weight: bold;
+        font-family: var(--ff-mr_de_haviland) ; 
     }
     .title-product {width: 100%;
     height: 50px;
@@ -217,12 +215,13 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 40px;
-background-color: #d6d6d6;}
+/* background-color: #d6d6d6;*/}
+
     
-     .product-sp .content {
+     .product-sp {
   
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+ 
     
     margin-bottom: 30px;
      } 
@@ -236,6 +235,9 @@ background-color: #d6d6d6;}
     height: 250px;
     margin-bottom: 30px;
     padding-top: 10px;}
+    .content{
+        box-shadow: -8px 8px 24px 0px rgba(0, 0, 0, 0.2);
+    }
     .content img {
     padding: 14px 14px 10px 14px;
      object-fit: cover;
@@ -248,9 +250,7 @@ background-color: #d6d6d6;}
     transform: scale(1.1); /* Chỉnh tỷ lệ phóng to tùy ý (ở đây là 1.2)
      */
         }
-    .content:hover {
-     border: 1px solid rgba(0,0,0,.125) /* Bóng cho phần content khi hover vào ảnh */
-    }
+ 
     .name-price {
         margin: 10px 0 10px 10px;
     }
