--- a/assets/css/log.css
+++ b/assets/css/log.css
@@ -1,18 +1,12 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-body{
+.box-containe{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #7f7f7f;
- 
+    width: 100%;
     
 }
 .containe{
-    margin-top: 150px;
+    margin: 150px 0 50px 0;
     height: 550px;
     width: 410px;
     background: #eee;
