--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,6 +143,9 @@
     top : 0;
     background-color: #fff;
     }
+    .navbar{
+        margin-top: 15px;
+    }
     
     /* tài khoản. giỏ hàng */
 
@@ -181,14 +184,12 @@
     background-color: #fbb416;
     padding: 8px 20px;
     margin-right: 15px;
-    color: #000;
-    border: 3px solid;
-    
-    
+   border-radius: 10px;
+font-weight: 600;
     }
     
     .btn-listing.active {
-    background-color:#000;
+    background-color:#000000;
     color:#fbb416;
     }
     
@@ -228,11 +229,7 @@
 
     
      .product-sp {
-  
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
- 
-    
-    margin-bottom: 30px;
+  margin-bottom: 30px;
      } 
      .bottom-footer {width: 100%;
     height: 300px;
@@ -246,20 +243,14 @@
     padding-top: 10px;}
     .content{
         box-shadow: -8px 8px 24px 0px rgba(0, 0, 0, 0.2);
+        width: 90%;
+
     }
     .content img {
-    padding: 14px 14px 10px 14px;
      object-fit: cover;
     width: 100%;
-    max-height: 85%;
-    transition: transform 0.3s ease-out;
-   
+    max-height: 80%;
     }
-    .content img:hover {
-    transform: scale(1.1); /* Chỉnh tỷ lệ phóng to tùy ý (ở đây là 1.2)
-     */
-        }
- 
     .name-price {
         margin: 10px 0 10px 10px;
     }
@@ -342,3 +333,22 @@ background-color: #d6d6d6;
     line-height: 30px;
     color: #333F48;
 }
+input:focus{
+    outline: none;
+    
+}
+button:focus{
+    outline: none;
+}
+
+/* seach form */
+.search-box-offcanvas {
+    margin-top: 12px;
+    
+  }
+  
+ 
+
+  
+
+  
